--- a/Webstack-Portfolio-Project/package.json
+++ b/Webstack-Portfolio-Project/package.json
@@ -15,7 +15,8 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
